Servindo tags para formulário parte II,  corrigindo titles

--- a/02-Iniciando-com-HTML5/05-servindo-tags-para-mídias.html
+++ b/02-Iniciando-com-HTML5/05-servindo-tags-para-mídias.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>02.02 Servindo tags para conteudo</title>
+        <title>02.05 Servindo tags para mídias</title>
     </head>
     <body>
         <!-- Cabeçalho (Navegação e Logo) -->
