--- a/02-Iniciando-com-HTML5/06-servindo-tags-para-formulário.html
+++ b/02-Iniciando-com-HTML5/06-servindo-tags-para-formulário.html
@@ -5,11 +5,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Document</title>
+        <title>02.06 Servindo tags para formulário</title>
     </head>
     <body>
         <main>
             <form action="#">
+                <!-- Agrupando elementos do formulário -->
                 <fieldset>
                     <legend>Formulário</legend>
 
