--- a/03-marcando-conteudo/index.html
+++ b/03-marcando-conteudo/index.html
@@ -5,9 +5,37 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Document</title>
+        <title>HTML5 & CSS3 Essentials</title>
     </head>
     <body>
-        
+        <header>
+            <a href="#">
+                <img src="img/logo.png" alt="Bem vindo ao curso HTML5 & CSS3 Essentials" title="Bem vindo ao curso HTML5 & CSS3 Essentials">
+            </a>
+
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">A Escola</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <main>
+            <article>
+                <header>
+                    <h1>Aqui você aprende tudo o que é necessário para trabalhar como um webmaster fullstack</h1>
+                </header>
+
+                <p>Domine o HTML5 e o CSS3 de uma vez por todas</p>
+                <p><a href="#" class="btn">Saiba Mais</a></p>
+            </article>
+        </main>
+
+        <footer>
+            
+        </footer>
     </body>
 </html>
