--- a/03-marcando-conteudo/index.html
+++ b/03-marcando-conteudo/index.html
@@ -32,6 +32,121 @@
                 <p>Domine o HTML5 e o CSS3 de uma vez por todas</p>
                 <p><a href="#" class="btn">Saiba Mais</a></p>
             </article>
+
+            <section>
+                <header>
+                    <h1>Nossos últimos artigos</h1>
+                    <p>Aqui você encontra os artigos necessários para auxiliar na sua caminhada web.</p>
+                </header>
+
+                <article>
+                    <a href="#">
+                        <img src="img/post.jpg" alt="Lorem Ipsum is simply dummy text of the printing and typesetting industry." title="Lorem Ipsum is simply dummy text of the printing and typesetting industry.">
+                    </a>
+
+                    <p>Categoria</p>
+                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+                </article>
+
+                <article>
+                    <a href="#">
+                        <img src="img/post.jpg" alt="Lorem Ipsum is simply dummy text of the printing and typesetting industry." title="Lorem Ipsum is simply dummy text of the printing and typesetting industry.">
+                    </a>
+
+                    <p>Categoria</p>
+                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+                </article>
+
+                <article>
+                    <a href="#">
+                        <img src="img/post.jpg" alt="Lorem Ipsum is simply dummy text of the printing and typesetting industry." title="Lorem Ipsum is simply dummy text of the printing and typesetting industry.">
+                    </a>
+
+                    <p>Categoria</p>
+                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+                </article>
+
+                <article>
+                    <a href="#">
+                        <img src="img/post.jpg" alt="Lorem Ipsum is simply dummy text of the printing and typesetting industry." title="Lorem Ipsum is simply dummy text of the printing and typesetting industry.">
+                    </a>
+
+                    <p>Categoria</p>
+                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+                </article>
+
+                <article>
+                    <a href="#">
+                        <img src="img/post.jpg" alt="Lorem Ipsum is simply dummy text of the printing and typesetting industry." title="Lorem Ipsum is simply dummy text of the printing and typesetting industry.">
+                    </a>
+
+                    <p>Categoria</p>
+                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+                </article>
+
+                <article>
+                    <a href="#">
+                        <img src="img/post.jpg" alt="Lorem Ipsum is simply dummy text of the printing and typesetting industry." title="Lorem Ipsum is simply dummy text of the printing and typesetting industry.">
+                    </a>
+
+                    <p>Categoria</p>
+                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+                </article>
+
+                <article>
+                    <a href="#">
+                        <img src="img/post.jpg" alt="Lorem Ipsum is simply dummy text of the printing and typesetting industry." title="Lorem Ipsum is simply dummy text of the printing and typesetting industry.">
+                    </a>
+
+                    <p>Categoria</p>
+                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+                </article>
+
+                <article>
+                    <a href="#">
+                        <img src="img/post.jpg" alt="Lorem Ipsum is simply dummy text of the printing and typesetting industry." title="Lorem Ipsum is simply dummy text of the printing and typesetting industry.">
+                    </a>
+
+                    <p>Categoria</p>
+                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+                </article>
+
+                <article>
+                    <a href="#">
+                        <img src="img/post.jpg" alt="Lorem Ipsum is simply dummy text of the printing and typesetting industry." title="Lorem Ipsum is simply dummy text of the printing and typesetting industry.">
+                    </a>
+
+                    <p>Categoria</p>
+                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+                </article>
+
+                <article>
+                    <a href="#">
+                        <img src="img/post.jpg" alt="Lorem Ipsum is simply dummy text of the printing and typesetting industry." title="Lorem Ipsum is simply dummy text of the printing and typesetting industry.">
+                    </a>
+
+                    <p>Categoria</p>
+                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+                </article>
+
+                <article>
+                    <a href="#">
+                        <img src="img/post.jpg" alt="Lorem Ipsum is simply dummy text of the printing and typesetting industry." title="Lorem Ipsum is simply dummy text of the printing and typesetting industry.">
+                    </a>
+
+                    <p>Categoria</p>
+                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+                </article>
+
+                <article>
+                    <a href="#">
+                        <img src="img/post.jpg" alt="Lorem Ipsum is simply dummy text of the printing and typesetting industry." title="Lorem Ipsum is simply dummy text of the printing and typesetting industry.">
+                    </a>
+
+                    <p>Categoria</p>
+                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+                </article>
+            </section>
         </main>
 
         <footer>
