Marcação de Optin

--- a/03-marcando-conteudo/index.html
+++ b/03-marcando-conteudo/index.html
@@ -147,6 +147,20 @@
                     <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
                 </article>
             </section>
+
+            <article>
+                <header>
+                    <h1>Quer receber todas as novidades no seu e-mail?</h1>
+                    <p>Informe seu nome e e-mail nos campos ao lado e clique em ok!</p>
+                </header>
+
+                <form action="#">
+                    <input type="text" name="" id="" placeholder="Seu nome">
+                    <input type="email" name="" id="" placeholder="Seu e-mail">
+
+                    <button type="submit">Ok!</button>
+                </form>
+            </article>
         </main>
 
         <footer>
