Marcação da dobra [Escola]

--- a/03-marcando-conteudo/index.html
+++ b/03-marcando-conteudo/index.html
@@ -372,6 +372,16 @@
                         </header>
                     </article>
                 </section>
+
+                <img src="img/upinside.jpg" alt="Upinside Treinamentos" title="Upinside Treinamentos">
+
+                <article>
+                    <header>
+                        <h2>Nos encontre</h2>
+                    </header>
+
+                    <p>Rua Huberto Rohden, 100 - Campeche - Florianópolis/SC - +55 48 3371-5879</p>
+                </article>
             </section>
         </main>
 
