--- a/03-marcando-conteudo/index.html
+++ b/03-marcando-conteudo/index.html
@@ -383,6 +383,55 @@
                     <p>Rua Huberto Rohden, 100 - Campeche - Florianópolis/SC - +55 48 3371-5879</p>
                 </article>
             </section>
+
+            <section>
+                <header>
+                    <h1>Conheça o Gustavo Web, seu tutor nesse curso</h1>
+                    <p>Eu vou te ajudar a criar sua webpage com HTML5 e CSS3</p>
+                </header>
+
+                <img src="img/gustavoweb.jpg" alt="Foto de Gustavo Web" title="Foto de Gustavo Web">
+
+                <article>
+                    <header>
+                        <h2>Formado em ciência da computação e apaixonado por web</h2>
+                    </header>
+
+                    <p>Como muitos, comecei na programação por conta dos jogos! Com o tempo, o amor pela programação foi crescendo a ponto de tomar como profissão e me especializar na área. Hoje, com a bagagem que tenho, compartilho meu conhecimento com todos os alunos da UpInside Treinamentos</p>
+                </article>
+
+                <section>
+                    <header>
+                        <h2>Me siga nas redes sociais</h2>
+                    </header>
+
+                    <article>
+                        <header>
+                            <h3><a href="#">Meu Facebook</a></h3>
+                        </header>
+                    </article>
+
+                    <article>
+
+                        <header>
+                            <h3><a href="#">Minha Fanpage</a></h3>
+                        </header>
+                    </article>
+
+                    <article>
+
+                        <header>
+                            <h3><a href="#">Meu Google+</a></h3>
+                        </header>
+                    </article>
+
+                    <article>
+                        <header>
+                            <h3><a href="#">Meu Instagram</a></h3>
+                        </header>
+                    </article>
+                </section>
+            </section>
         </main>
 
         <footer>
