--- a/03-marcando-conteudo/index.html
+++ b/03-marcando-conteudo/index.html
@@ -434,6 +434,57 @@
             </section>
         </main>
 
+        <section>
+            <header>
+                <h1>Quer receber nosso conteúdo exclusivo? Assine nossa lista VIP :)</h1>
+            </header>
+
+            <article>
+                <header>
+                    <h2><a href="#" class="btn">Entra para lista VIP</a></h2>
+                </header>
+            </article>
+        </section>
+
+        <section>
+            <header>
+                <h1>Quer saber mais?</h1>
+            </header>
+
+            <article>
+                <header>
+                    <h2>Nossas páginas</h2>
+                </header>
+
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">A Escola</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+            </article>
+
+            <article>
+                <header>
+                    <h2>Links úteis</h2>
+                </header>
+
+                <ul>
+                    <li><a href="#">Política de privacidade</a></li>
+                    <li><a href="#">Aviso legal</a></li>
+                    <li><a href="#">Termos de uso</a></li>
+                </ul>
+            </article>
+
+            <article>
+                <header>
+                    <h2>Sobre o projeto</h2>
+                </header>
+
+                <p>Aprenda a trabalhar com HTML5 e CSS3 para desenvolver seus projetos e entregar páginas que estejam dentro dos padrões da WEB seguindo as boas práticas!</p>
+            </article>
+        </section>
+
         <footer>
             
         </footer>
