Marcação de CTA + Rodapé

--- a/03-marcando-conteudo/index.html
+++ b/03-marcando-conteudo/index.html
@@ -486,7 +486,7 @@
         </section>
 
         <footer>
-            
+            <p>Todos os direitos reservados a UpInside Treinamentos ®</p>
         </footer>
     </body>
 </html>
