Validação da página através do site https://whatwg.org/

--- a/03-marcando-conteudo/index.html
+++ b/03-marcando-conteudo/index.html
@@ -155,8 +155,8 @@
                 </header>
 
                 <form action="#">
-                    <input type="text" name="" id="" placeholder="Seu nome">
-                    <input type="email" name="" id="" placeholder="Seu e-mail">
+                    <input type="text" placeholder="Seu nome">
+                    <input type="email" placeholder="Seu e-mail">
 
                     <button type="submit">Ok!</button>
                 </form>
@@ -164,7 +164,7 @@
 
             <section>
                 <header>
-                    <img src="img/logo.png" alt="" title="">
+                    <img src="img/logo.png" alt="Curso HTML5 & CSS3 ESSENTIALS" title="Curso HTML5 & CSS3 ESSENTIALS">
                     <h1>HTML5 & CSS3 ESSENTIALS</h1>
                     <p>Aprenda a trabalhar com HTML5 e CSS3 para desenvolver seus projetos e entregar páginas que estejam dentro dos padrões da WEB seguindo as boas práticas!</p>
                 </header>
@@ -318,8 +318,9 @@
                         <a href="#">Facebook</a>
                         <a href="#">Google+</a>
                         <a href="#">Twitter</a>
-                        <h2>Tudo o que você precisa para ser um WebMaster Full Stack em um só lugar</h2>
                     </p>
+                    
+                    <h2>Tudo o que você precisa para ser um WebMaster Full Stack em um só lugar</h2>
 
                     <p>Desde 2010 a UpInside vem criando os melhores cursos do mercado, entregamos ao aluno conhecimento prático e testado sem enrolação. Você tem acesso a aulas com a melhor qualidade, recursos que aceleram seu aprendizado e muito mais...</p>
                     <p>Que tal estudar, e ter o certificado da escola eleita a melhor do Brasil com reconhecimento em mais de 17 países pela Latin American Quality Institute?</p>
