--- a/04-estilizando-conteudo/index.html
+++ b/04-estilizando-conteudo/index.html
@@ -13,19 +13,21 @@
         <link rel="stylesheet" type="text/css" href="_cdn/css/style.css">
     </head>
     <body>
-        <header>
-            <a href="#">
-                <img src="img/logo.png" alt="Bem vindo ao curso HTML5 & CSS3 Essentials" title="Bem vindo ao curso HTML5 & CSS3 Essentials">
-            </a>
+        <header class="main_header">
+            <div class="main_header_content">
+                <a href="#" class="main_header_content_logo">
+                    <img src="img/logo.png" alt="Bem vindo ao curso HTML5 & CSS3 Essentials" title="Bem vindo ao curso HTML5 & CSS3 Essentials">
+                </a>
 
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">A Escola</a></li>
-                    <li><a href="#">Contato</a></li>
-                </ul>
-            </nav>
+                <nav class="main_header_content_menu">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">A Escola</a></li>
+                        <li><a href="#">Contato</a></li>
+                    </ul>
+                </nav>
+            </div> 
         </header>
 
         <main>
