--- a/04-estilizando-conteudo/index.html
+++ b/04-estilizando-conteudo/index.html
@@ -8,7 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
         <link rel="stylesheet" type="text/css" href="_cdn/css/fonticon.css">
-        <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="_cdn/css/boot.css">
         <link rel="stylesheet" type="text/css" href="_cdn/css/style.css">
     </head>
@@ -31,14 +31,18 @@
         </header>
 
         <main>
-            <article>
-                <header>
-                    <h1>Aqui você aprende tudo o que é necessário para trabalhar como um webmaster fullstack</h1>
-                </header>
+            <div class="main_cta">
+                <article class="main_cta_content">
+                    <div class="main_cta_content_spacer">
+                        <header>
+                            <h1>Aqui você aprende tudo o que é necessário para trabalhar como um webmaster fullstack</h1>
+                        </header>
 
-                <p>Domine o HTML5 e o CSS3 de uma vez por todas</p>
-                <p><a href="#" class="btn">Saiba Mais</a></p>
-            </article>
+                        <p>Domine o HTML5 e o CSS3 de uma vez por todas</p>
+                        <p><a href="#" class="btn">Saiba Mais</a></p>
+                    </div>
+                </article>
+            </div>
 
             <section>
                 <header>
