RInclusão delinks e classes para estilização da 'Sessão de Artigos'

--- a/04-estilizando-conteudo/index.html
+++ b/04-estilizando-conteudo/index.html
@@ -42,9 +42,9 @@
                 </article>
             </div>
 
-            <section>
-                <header>
-                    <h1>Nossos últimos artigos</h1>
+            <section class="main_blog">
+                <header class="main_blog_header">
+                    <h1 class="icon-blog">Nossos últimos artigos</h1>
                     <p>Aqui você encontra os artigos necessários para auxiliar na sua caminhada web.</p>
                 </header>
 
@@ -53,8 +53,8 @@
                         <img src="img/post.jpg" alt="Lorem Ipsum is simply dummy text of the printing and typesetting industry." title="Lorem Ipsum is simply dummy text of the printing and typesetting industry.">
                     </a>
 
-                    <p>Categoria</p>
-                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+                    <p><a href="#" class="category">Categoria</a></p>
+                    <h2><a href="#" class="title">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</a></h2>
                 </article>
 
                 <article>
@@ -62,8 +62,8 @@
                         <img src="img/post.jpg" alt="Lorem Ipsum is simply dummy text of the printing and typesetting industry." title="Lorem Ipsum is simply dummy text of the printing and typesetting industry.">
                     </a>
 
-                    <p>Categoria</p>
-                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+                    <p><a href="#" class="category">Categoria</a></p>
+                    <h2><a href="#" class="title">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</a></h2>
                 </article>
 
                 <article>
@@ -71,8 +71,8 @@
                         <img src="img/post.jpg" alt="Lorem Ipsum is simply dummy text of the printing and typesetting industry." title="Lorem Ipsum is simply dummy text of the printing and typesetting industry.">
                     </a>
 
-                    <p>Categoria</p>
-                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+                    <p><a href="#" class="category">Categoria</a></p>
+                    <h2><a href="#" class="title">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</a></h2>
                 </article>
 
                 <article>
@@ -80,8 +80,8 @@
                         <img src="img/post.jpg" alt="Lorem Ipsum is simply dummy text of the printing and typesetting industry." title="Lorem Ipsum is simply dummy text of the printing and typesetting industry.">
                     </a>
 
-                    <p>Categoria</p>
-                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+                    <p><a href="#" class="category">Categoria</a></p>
+                    <h2><a href="#" class="title">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</a></h2>
                 </article>
 
                 <article>
@@ -89,8 +89,8 @@
                         <img src="img/post.jpg" alt="Lorem Ipsum is simply dummy text of the printing and typesetting industry." title="Lorem Ipsum is simply dummy text of the printing and typesetting industry.">
                     </a>
 
-                    <p>Categoria</p>
-                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+                    <p><a href="#" class="category">Categoria</a></p>
+                    <h2><a href="#" class="title">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</a></h2>
                 </article>
 
                 <article>
@@ -98,8 +98,8 @@
                         <img src="img/post.jpg" alt="Lorem Ipsum is simply dummy text of the printing and typesetting industry." title="Lorem Ipsum is simply dummy text of the printing and typesetting industry.">
                     </a>
 
-                    <p>Categoria</p>
-                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+                    <p><a href="#" class="category">Categoria</a></p>
+                    <h2><a href="#" class="title">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</a></h2>
                 </article>
 
                 <article>
@@ -107,8 +107,8 @@
                         <img src="img/post.jpg" alt="Lorem Ipsum is simply dummy text of the printing and typesetting industry." title="Lorem Ipsum is simply dummy text of the printing and typesetting industry.">
                     </a>
 
-                    <p>Categoria</p>
-                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+                    <p><a href="#" class="category">Categoria</a></p>
+                    <h2><a href="#" class="title">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</a></h2>
                 </article>
 
                 <article>
@@ -116,8 +116,8 @@
                         <img src="img/post.jpg" alt="Lorem Ipsum is simply dummy text of the printing and typesetting industry." title="Lorem Ipsum is simply dummy text of the printing and typesetting industry.">
                     </a>
 
-                    <p>Categoria</p>
-                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+                    <p><a href="#" class="category">Categoria</a></p>
+                    <h2><a href="#" class="title">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</a></h2>
                 </article>
 
                 <article>
@@ -125,8 +125,8 @@
                         <img src="img/post.jpg" alt="Lorem Ipsum is simply dummy text of the printing and typesetting industry." title="Lorem Ipsum is simply dummy text of the printing and typesetting industry.">
                     </a>
 
-                    <p>Categoria</p>
-                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+                    <p><a href="#" class="category">Categoria</a></p>
+                    <h2><a href="#" class="title">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</a></h2>
                 </article>
 
                 <article>
@@ -134,8 +134,8 @@
                         <img src="img/post.jpg" alt="Lorem Ipsum is simply dummy text of the printing and typesetting industry." title="Lorem Ipsum is simply dummy text of the printing and typesetting industry.">
                     </a>
 
-                    <p>Categoria</p>
-                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+                    <p><a href="#" class="category">Categoria</a></p>
+                    <h2><a href="#" class="title">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</a></h2>
                 </article>
 
                 <article>
@@ -143,8 +143,8 @@
                         <img src="img/post.jpg" alt="Lorem Ipsum is simply dummy text of the printing and typesetting industry." title="Lorem Ipsum is simply dummy text of the printing and typesetting industry.">
                     </a>
 
-                    <p>Categoria</p>
-                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+                    <p><a href="#" class="category">Categoria</a></p>
+                    <h2><a href="#" class="title">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</a></h2>
                 </article>
 
                 <article>
@@ -152,8 +152,8 @@
                         <img src="img/post.jpg" alt="Lorem Ipsum is simply dummy text of the printing and typesetting industry." title="Lorem Ipsum is simply dummy text of the printing and typesetting industry.">
                     </a>
 
-                    <p>Categoria</p>
-                    <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+                    <p><a href="#" class="category">Categoria</a></p>
+                    <h2><a href="#" class="title">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</a></h2>
                 </article>
             </section>
 
