Estilização de Optin

--- a/04-estilizando-conteudo/index.html
+++ b/04-estilizando-conteudo/index.html
@@ -157,18 +157,20 @@
                 </article>
             </section>
 
-            <article>
-                <header>
-                    <h1>Quer receber todas as novidades no seu e-mail?</h1>
-                    <p>Informe seu nome e e-mail nos campos ao lado e clique em ok!</p>
-                </header>
+            <article class="main_optin">
+                <div class="main_optin_content">
+                    <header>
+                        <h1>Quer receber todas as novidades no seu e-mail?</h1>
+                        <p>Informe seu nome e e-mail nos campos ao lado e clique em ok!</p>
+                    </header>
 
-                <form action="#">
-                    <input type="text" placeholder="Seu nome">
-                    <input type="email" placeholder="Seu e-mail">
+                    <form action="#">
+                        <input type="text" placeholder="Seu nome">
+                        <input type="email" placeholder="Seu e-mail">
 
-                    <button type="submit">Ok!</button>
-                </form>
+                        <button type="submit">Ok!</button>
+                    </form>
+                </div>
             </article>
 
             <section>
