--- a/04-estilizando-conteudo/index.html
+++ b/04-estilizando-conteudo/index.html
@@ -335,8 +335,8 @@
                         <article>
                             <p class="main_school_content_left_social_network">
                                 <span class="icon-facebook"><a href="#">Facebook</a></span>
-                                <span class="icon-google-plus2"></span><a href="#">Google+</a></span>
-                                <span class="icon-twitter"></span><a href="#">Twitter</a></span>
+                                <span class="icon-google-plus2"><a href="#">Google+</a></span>
+                                <span class="icon-twitter"><a href="#">Twitter</a></span>
                             </p>
                             
                             <h2>Tudo o que você precisa para ser um WebMaster Full Stack em um só lugar</h2>
