Estilização da Dobra [A Escola] pt2 - Correções

--- a/04-estilizando-conteudo/index.html
+++ b/04-estilizando-conteudo/index.html
@@ -347,7 +347,7 @@
                             <p>Que tal estudar, e ter o certificado da escola eleita a melhor do Brasil com reconhecimento em mais de 17 países pela Latin American Quality Institute?</p>
                         </article>
 
-                        <section class="main_school_awards">
+                        <section class="main_school_content_awards">
                             <header>
                                 <h2>Confira nossos prêmios</h2>
                             </header>
@@ -400,7 +400,7 @@
                         <img class="" src="img/upinside.jpg" alt="Upinside Treinamentos" title="Upinside Treinamentos">
                     </div>
 
-                    <article class="main_school_address">
+                    <article class="main_school_content_address">
                         <header>
                             <h2 class="icon-map2">Nos encontre</h2>
                         </header>
