Estilização da Dobra [Tutor]

--- a/04-estilizando-conteudo/index.html
+++ b/04-estilizando-conteudo/index.html
@@ -410,53 +410,57 @@
                 </section>
             </div>
 
-            <section>
-                <header>
-                    <h1>Conheça o Gustavo Web, seu tutor nesse curso</h1>
-                    <p>Eu vou te ajudar a criar sua webpage com HTML5 e CSS3</p>
-                </header>
-
-                <img src="img/gustavoweb.jpg" alt="Foto de Gustavo Web" title="Foto de Gustavo Web">
-
-                <article>
+            <section class="main_tutor">
+                <div class="main_tutor_content">
                     <header>
-                        <h2>Formado em ciência da computação e apaixonado por web</h2>
+                        <h1>Conheça o Gustavo Web, seu tutor nesse curso</h1>
+                        <p>Eu vou te ajudar a criar sua webpage com HTML5 e CSS3</p>
                     </header>
 
-                    <p>Como muitos, comecei na programação por conta dos jogos! Com o tempo, o amor pela programação foi crescendo a ponto de tomar como profissão e me especializar na área. Hoje, com a bagagem que tenho, compartilho meu conhecimento com todos os alunos da UpInside Treinamentos</p>
-                </article>
+                    <div class="main_tutor_content_img">
+                        <img src="img/gustavoweb.jpg" alt="Foto de Gustavo Web" title="Foto de Gustavo Web">
+                    </div>
 
-                <section>
-                    <header>
-                        <h2>Me siga nas redes sociais</h2>
-                    </header>
-
-                    <article>
+                    <article class="main_tutor_content_formation">
                         <header>
-                            <h3><a href="#">Meu Facebook</a></h3>
+                            <h2>Formado em Ciência da Computação e Apaixonado por Web</h2>
                         </header>
+
+                        <p>Como muitos, comecei na programação por conta dos jogos! Com o tempo, o amor pela programação foi crescendo a ponto de tomar como profissão e me especializar na área. Hoje, com a bagagem que tenho, compartilho meu conhecimento com todos os alunos da UpInside Treinamentos</p>
                     </article>
 
-                    <article>
-
+                    <section class="main_tutor_social_networks">
                         <header>
-                            <h3><a href="#">Minha Fanpage</a></h3>
+                            <h2>Me siga nas redes sociais</h2>
                         </header>
-                    </article>
 
-                    <article>
+                        <article>
+                            <header>
+                                <h3><a href="#" class="icon-facebook">Meu Facebook</a></h3>
+                            </header>
+                        </article>
 
-                        <header>
-                            <h3><a href="#">Meu Google+</a></h3>
-                        </header>
-                    </article>
+                        <article>
 
-                    <article>
-                        <header>
-                            <h3><a href="#">Meu Instagram</a></h3>
-                        </header>
-                    </article>
-                </section>
+                            <header>
+                                <h3><a href="#" class="icon-facebook2">Minha Fanpage</a></h3>
+                            </header>
+                        </article>
+
+                        <article>
+
+                            <header>
+                                <h3><a href="#" class="icon-google-plus2">Meu Google+</a></h3>
+                            </header>
+                        </article>
+
+                        <article>
+                            <header>
+                                <h3><a href="#" class="icon-instagram">Meu Instagram</a></h3>
+                            </header>
+                        </article>
+                    </section>
+                </div>
             </section>
         </main>
 
