Estilização do Rodapé

--- a/04-estilizando-conteudo/index.html
+++ b/04-estilizando-conteudo/index.html
@@ -464,19 +464,21 @@
             </section>
         </main>
 
-        <section>
-            <header>
-                <h1>Quer receber nosso conteúdo exclusivo? Assine nossa lista VIP :)</h1>
-            </header>
-
-            <article>
+        <section class="main_optin_footer">
+            <div class="main_content_optin_footer">
                 <header>
-                    <h2><a href="#" class="btn">Entra para lista VIP</a></h2>
+                    <h1>Quer receber nosso conteúdo exclusivo? Assine nossa lista VIP :)</h1>
                 </header>
-            </article>
+
+                <article>
+                    <header>
+                        <h2><a href="#" class="btn">Entra para lista VIP</a></h2>
+                    </header>
+                </article>
+            </div>
         </section>
 
-        <section>
+        <section class="main_footer">
             <header>
                 <h1>Quer saber mais?</h1>
             </header>
