--- a/04-estilizando-conteudo/index.html
+++ b/04-estilizando-conteudo/index.html
@@ -19,12 +19,25 @@
                     <img src="img/logo.png" alt="Bem vindo ao curso HTML5 & CSS3 Essentials" title="Bem vindo ao curso HTML5 & CSS3 Essentials">
                 </a>
 
-                <nav class="main_header_content_menu">
+                <nav class="main_header_content_menu" style="display: none;">
                     <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Blog</a></li>
                         <li><a href="#">A Escola</a></li>
                         <li><a href="#">Contato</a></li>
+                    </ul>
+                </nav>
+
+                <nav class="main_header_content_menu_mobile">
+                    <ul>
+                        <li><span class="main_header_content_menu_mobile_obj icon-menu icon-notext"></span>
+                            <ul class="main_header_content_menu_mobile_sub">
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Blog</a></li>
+                                <li><a href="#">A Escola</a></li>
+                                <li><a href="#">Contato</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </nav>
             </div> 
