--- a/04-estilizando-conteudo/index.html
+++ b/04-estilizando-conteudo/index.html
@@ -30,8 +30,9 @@
 
                 <nav class="main_header_content_menu_mobile">
                     <ul>
-                        <li><span class="main_header_content_menu_mobile_obj icon-menu icon-notext"></span>
-                            <ul class="main_header_content_menu_mobile_sub">
+                        <li>
+                            <span class="main_header_content_menu_mobile_obj icon-menu icon-notext"></span>
+                            <ul class="main_header_content_menu_mobile_sub ds_none">
                                 <li><a href="#">Home</a></li>
                                 <li><a href="#">Blog</a></li>
                                 <li><a href="#">A Escola</a></li>
@@ -533,5 +534,8 @@
         <footer>
             <p>Todos os direitos reservados a UpInside Treinamentos ®</p>
         </footer>
+
+        <script src="_cdn/jquery-3.4.1.min.js" type="text/javascript"></script>
+        <script src="_cdn/main.js" type="text/javascript"></script>
     </body>
 </html>
